<resources>
    <string name="app_name">阅片无数</string>
    <string name="title_recommend">安利</string>
    <string name="title_question">问番</string>
    <string name="title_search">阅片无数</string>
    <string name="title_user">我的</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="toLogin">已有账号，去登录</string>
    <string name="toRegister">未有账号，去注册</string>
    <string name="account_hint">请输入用户名</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="repeatpwd_hint">请确认密码</string>
    <string name="edit_hint0">输入发表内容</string>
    <string name="edit_hint1">输入动漫表述</string>
    <string name="search_hint">番剧搜索</string>
    <string name="follow_text">关注数</string>
    <string name="fan_text">粉丝数</string>
    <string name="collect_text">收藏数</string>
</resources>
