<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.example.watchmore.ui.user.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:menu="@menu/user_fragment_menu" />

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:onClick="@{(view)->data.intentToUserDetail(view)}">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_head_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_vertical"
                    imageUrl="@{data.headImage}"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:text="@={data.userName}"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:text="个人信息"
                        android:layout_weight="1"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <ImageView
                    android:id="@+id/view_one"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/view_two"
                    android:src="@drawable/ic_follower"
                    android:onClick="@{(view)->data.intentToFollowers(view)}"/>
                <ImageView
                    android:id="@+id/view_two"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/view_one"
                    app:layout_constraintRight_toLeftOf="@id/view_three"
                    android:src="@drawable/ic_fan"
                    android:onClick="@{(view)->data.intentToFans(view)}"/>
                <ImageView
                    android:id="@+id/view_three"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/view_two"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/ic_collect"
                    android:onClick="@{(view)->data.intentToCollect(view)}"/>
                <TextView
                    android:id="@+id/text_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view_one"
                    app:layout_constraintStart_toStartOf="@id/view_one"
                    app:layout_constraintEnd_toEndOf="@id/view_one"
                    android:text="@string/follow_text"/>
                <TextView
                    android:id="@+id/text_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view_two"
                    app:layout_constraintStart_toStartOf="@id/view_two"
                    app:layout_constraintEnd_toEndOf="@id/view_two"
                    android:text="@string/fan_text"/>
                <TextView
                    android:id="@+id/text_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view_three"
                    app:layout_constraintStart_toStartOf="@id/view_three"
                    app:layout_constraintEnd_toEndOf="@id/view_three"
                    android:text="@string/collect_text"/>
                <TextView
                    android:id="@+id/text_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_one"
                    app:layout_constraintStart_toStartOf="@id/view_one"
                    app:layout_constraintEnd_toEndOf="@id/view_one"
                    android:text="@{data.followers}"/>
                <TextView
                    android:id="@+id/text_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_two"
                    app:layout_constraintStart_toStartOf="@id/view_two"
                    app:layout_constraintEnd_toEndOf="@id/view_two"
                    android:text="@{data.fans}"/>
                <TextView
                    android:id="@+id/text_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_three"
                    app:layout_constraintStart_toStartOf="@id/view_three"
                    app:layout_constraintEnd_toEndOf="@id/view_three"
                    android:text="@{data.collects}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{(view)->data.intentToQuestion(view)}">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/view_four"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/question"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="25dp"
                    android:text="@{data.question}"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{(view)->data.intentToRecommend(view)}">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/view_five"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_recommend"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="25dp"
                    android:text="@{data.recommend}"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>